--- a/curse-manager/src/app/courses/course-list.component.html
+++ b/curse-manager/src/app/courses/course-list.component.html
@@ -7,32 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatum molestiae odio vitae, ipsa, consequuntur facilis amet at, quia enim saepe? Ex aut explicabo corporis doloribus quas sunt libero dicta.
-    </p>
+  
 
-    <table class="table table-stiped">
+    <table class="table table-striped">
         <thead>
                 <tr>
                     <th>Image</th>
                     <th>Name</th>
                     <th>Price</th>
                     <th>Code</th>
-                    <th>releaseDate</th>
+                    <th>Release Date</th>
                     <th>Rating</th>
+                    <th>Options </th>
                 </tr>
         </thead>
         <tbody>
             <tr *ngFor="let course of courses">
-                <td>{{ course.imageUrl }}</td>
+                <td><img [src]="course.imageUrl" width="40" heigth="40" alt=""></td>
                 <td>{{ course.name }}</td>
                 <td>{{ course.price }}</td>
                 <td>{{ course.code }}</td>              
                 <td>{{ course.releaseDate }}</td>
-                <td>{{ course.rating }}</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>
+                    
+                    <app-star [rating]="course.rating"></app-star>
+
+
+                </td>
+                <td>{{ course.options }}</td>
 
             </tr>
         </tbody>
