--- a/curse-manager/src/app/app.component.html
+++ b/curse-manager/src/app/app.component.html
@@ -1,7 +1,9 @@
 
+<app-nav-bar></app-nav-bar>
 
 <div class="container">
  
   <h3> {{title}} </h3>
-  <app-course-list></app-course-list>
+  <router-outlet></router-outlet>
+
 </div>
