--- a/curse-manager/src/app/courses/course-list.component.html
+++ b/curse-manager/src/app/courses/course-list.component.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-  
+    
+    <div class="form-group row">
+
+        <label class="col-sm-2 col-form-label">Filter By:</label>
+
+        <div class="col-sm-10">     
+            <input [(ngModel)]="filter" class="form-control">
+        </div>
+
+    </div>
+
 
     <table class="table table-striped">
         <thead>
@@ -22,12 +32,12 @@
                 </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let course of courses">
+            <tr *ngFor="let course of filteredCourses">
                 <td><img [src]="course.imageUrl" width="40" heigth="40" alt=""></td>
                 <td>{{ course.name }}</td>
                 <td>{{ course.price }}</td>
-                <td>{{ course.code }}</td>              
-                <td>{{ course.releaseDate }}</td>
+                <td>{{ course.code | lowercase | replace: '-':'+' }}</td>              
+                <td>{{ course.releaseDate | date: 'dd/MM/yyyy' }}</td>
                 <td>
                     
                     <app-star [rating]="course.rating"></app-star>
