--- a/curse-manager/src/app/app.component.html
+++ b/curse-manager/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <app-nav-bar></app-nav-bar>
 
-<div class="container">
+<div class="container mt-4">
  
-  <h3> {{title}} </h3>
+  
   <router-outlet></router-outlet>
 
 </div>
