continuação do estudo

--- a/curse-manager/src/app/courses/course-list.component.html
+++ b/curse-manager/src/app/courses/course-list.component.html
@@ -46,7 +46,7 @@
                 </td>
                 <td>
 
-                    <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary">Edit</a>
+                    <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary">Editar</a>
 
                 </td>
 
