--- a/course-manager/src/app/nav-bar/nav-bar.component.html
+++ b/course-manager/src/app/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li href="#" class="nav-item">
-                <a  [routerLink]="['/courses']" routerLinkActive="active" class="nav-link">Courses</a>
+                <a  [routerLink]="['/courses']" routerLinkActive="active" class="nav-link">Courses  versao 1.1</a>
             </li>
         </ul>
     </div>
