--- a/course-manager/src/app/nav-bar/nav-bar.component.html
+++ b/course-manager/src/app/nav-bar/nav-bar.component.html
@@ -10,8 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li href="#" class="nav-item">
-                <a  [routerLink]="['/courses']" routerLinkActive="active" class="nav-link">Courses - MASTER</a>
+                <a  [routerLink]="['/courses']" routerLinkActive="active" class="nav-link">Courses</a>
             </li>
         </ul>
+    </div>
+    <div  >
+        <h2 style="color: aliceblue;">
+            Versao 1.1
+        </h2>
     </div>
 </nav> 
